[package]
name = "fml9000"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
diesel = { version = "2.1", features = ["sqlite", "chrono", "uuid"] }
diesel_migrations = { version = "2.1", features = ["sqlite"] }
directories = "5.0"
chrono = "0.4"
gtk = { version = "0.9", package = "gtk4", features = ["v4_10"] }
lofty = "0"
notify = "6"
regex = "1"
rodio = "0.19"
serde_derive = "1"
serde = "1"
toml = "0.8"
walkdir = "2"
adw = { version = "0.7", package = "libadwaita" }
