[package]
name = "fml9000"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
diesel = { version = "2.1", features = ["sqlite", "chrono", "uuid"] }
diesel_migrations = { version = "2.1", features = ["sqlite"] }
directories = "6"
chrono = "0.4"
gtk = { version = "0.9", package = "gtk4", features = ["v4_16"] }
lofty = "0"
notify = "8"
regex = "1"
rodio = "0.20"
serde_derive = "1"
serde = "1"
serde_json = "1"
toml = "0.8"
walkdir = "2"
adw = { version = "0.7", package = "libadwaita" }
rand = "0.8"
ureq = { version = "2", features = ["json"] }
