[workspace]
resolver = "2"
members = [
  "crates/fml9000-core",
  "crates/fml9000-gtk",
  "crates/fml9000-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
diesel = { version = "2.1", features = ["sqlite", "chrono", "uuid"] }
diesel_migrations = { version = "2.1", features = ["sqlite"] }
directories = "6"
chrono = "0.4"
serde_derive = "1"
serde = "1"
toml = "0.9"
rodio = "0.21"
ureq = { version = "3", features = ["json"] }
