[package]
name = "fml9000-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
diesel = { workspace = true }
diesel_migrations = { workspace = true }
directories = { workspace = true }
chrono = { workspace = true }
serde_derive = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
rodio = { workspace = true }
ureq = { workspace = true }
lofty = "0"
walkdir = "2"
