[package]
name = "fml9000-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fml9000-tui"
path = "src/main.rs"

[dependencies]
fml9000-core = { path = "../fml9000-core" }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
nucleo = "0.5"
rodio = { workspace = true }
rand = "0.9"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
