[package]
name = "fml9000-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fml9000-web"
path = "src/main.rs"

[dependencies]
fml9000-core = { path = "../fml9000-core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
chrono = { workspace = true }
rodio = { workspace = true }
lofty = "0"
